--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -21,7 +22,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-searchable-dropdown": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
