--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -17,6 +18,7 @@
     "axios": "^1.6.2",
     "axios-retry": "^4.0.0",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
