--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-swipe-list-view": "^3.2.9",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
